[OLC1]Proyecto2_201602625/backend/Analizador/sintacticoPy.js
const Token = require('../AST/tokenPy');
const Error = require('../AST/error');

class Sintactico{
    constructor(tokens, errores, cErrores){
        this.tokens = [];
        this.tokens = tokens;
        this.errores = errores;
        this.cErrores = cErrores;
        this.tokenAux = null;
        this.Numtoken = -1;
        this.traduccion = ``;
        this.cadenaAux = ``;
        this.tab = ``;
        this.errorSyntax = false;
    }

    Start(){

        if (this.Numtoken < ((Object.keys(this.tokens).length) -1) ) {
            
            this.tokenAux = this.SiguienteToken();
            this.Iniciar();
        }
    }

    Iniciar(){
        this.ListaDeclarariones();    
    }

    ListaDeclarariones(){
        this.DPrograma();
    }

    DPrograma(){
        
        if (this.TokenCorrecto(this.tokenAux,"tk_public") || this.TokenCorrecto(this.tokenAux,"tk_private")){

            this.tokenAux = this.SiguienteToken();
            if (this.TokenCorrecto(this.tokenAux,"tk_class")){

                this.tokenAux = this.SiguienteToken();
                if (this.TokenCorrecto(this.tokenAux,"tk_id")){

                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                        this.tokenAux = this.SiguienteToken();
                        this.ListaDeclarariones();
                        if (this.TokenCorrecto(this.tokenAux,"tk_lc")){
                            
                            this.tokenAux = this.SiguienteToken();
                            this.ListaDeclarariones();

                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                        }   


                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                    }

                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba un id"));
                }

            } else if (this.TokenCorrecto(this.tokenAux,"tk_interface")) {

                this.tokenAux = this.SiguienteToken();
                if (this.TokenCorrecto(this.tokenAux,"tk_id")){

                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                        this.tokenAux = this.SiguienteToken();
                        this.LInterfaz();
                        if (this.TokenCorrecto(this.tokenAux,"tk_lc")){

                            this.tokenAux = this.SiguienteToken();
                            this.ListaDeclarariones();

                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                        } 


                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                    }  


                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba un id"));
                }  


            } else if (this.TokenCorrecto(this.tokenAux,"tk_static")) {

                this.tokenAux = this.SiguienteToken();
                if (this.TokenCorrecto(this.tokenAux,"tk_void")){
                    
                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_main")){

                        this.tokenAux = this.SiguienteToken();
                        if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                            this.tokenAux = this.SiguienteToken();
                            if (this.TokenCorrecto(this.tokenAux,"tk_string")){

                                this.tokenAux = this.SiguienteToken();
                                if (this.TokenCorrecto(this.tokenAux,"tk_ca")){
    
                                    this.tokenAux = this.SiguienteToken();
                                    if (this.TokenCorrecto(this.tokenAux,"tk_cc")){
        
                                        this.tokenAux = this.SiguienteToken();
                                        if (this.TokenCorrecto(this.tokenAux,"tk_args")){

                                            this.tokenAux = this.SiguienteToken();
                                            if (this.TokenCorrecto(this.tokenAux,"tk_pc")){

                                                this.tokenAux = this.SiguienteToken();
                                                if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                                                    this.tokenAux = this.SiguienteToken();
                                                    this.Instrucciones();
                                                    if (this.TokenCorrecto(this.tokenAux,"tk_lc")){
                            
                                                        this.tokenAux = this.SiguienteToken();
                                                        this.ListaDeclarariones();
                            
                                                    } else {
                                                        this.cErrores++;
                            this.errorSyntax = true;            
                                                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                                                    }   
                    
                                                    
                                                } else {
                                                    this.cErrores++;
                            this.errorSyntax = true;            
                                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                                                } 
                
                                                
                                            } else {
                                                this.cErrores++;
                            this.errorSyntax = true;            
                                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                                            } 
            
                                            
                                        } else {
                                            this.cErrores++;
                            this.errorSyntax = true;            
                                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada args"));
                                        } 
                                        
                                    } else {
                                        this.cErrores++;
                            this.errorSyntax = true;            
                                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ]"));
                                    } 
                                    
                                } else {
                                    this.cErrores++;
                            this.errorSyntax = true;            
                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ["));
                                } 

                                
                            } else {
                                this.cErrores++;
                            this.errorSyntax = true;            
                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada String"));
                            } 

                            
                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
                        } 
                        
                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada main"));
                    } 
                    
                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada void"));
                } 

            } else if (this.TokenCorrecto(this.tokenAux,"tk_void") || this.TokenCorrecto(this.tokenAux,"tk_int") || this.TokenCorrecto(this.tokenAux,"tk_double") || this.TokenCorrecto(this.tokenAux,"tk_string") || this.TokenCorrecto(this.tokenAux,"tk_boolean") || this.TokenCorrecto(this.tokenAux,"tk_char")){

                this.tokenAux = this.SiguienteToken();
                if (this.TokenCorrecto(this.tokenAux,"tk_id")){

                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                        this.tokenAux = this.SiguienteToken();
                        this.Parametros();
                        if (this.TokenCorrecto(this.tokenAux,"tk_pc")){

                            this.tokenAux = this.SiguienteToken();
                            if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                                this.tokenAux = this.SiguienteToken();
                                this.Instrucciones();
                                if (this.TokenCorrecto(this.tokenAux,"tk_lc")){
        
                                    this.tokenAux = this.SiguienteToken();
                                    this.ListaDeclarariones();
        
                                } else {
                                    this.cErrores++;
                            this.errorSyntax = true;            
                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                                }   
    
    
                            } else {
                                this.cErrores++;
                            this.errorSyntax = true;            
                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                            }   


                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                        }   


                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
                    }   


                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba un id"));
                }   

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba class, interface, static, void, etc."));
            }


        } else if (this.TokenCorrecto(this.tokenAux,"tk_if")){

            this.tokenAux = this.SiguienteToken();
            if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                this.tokenAux = this.SiguienteToken();
                this.Expresion();
                if (this.TokenCorrecto(this.tokenAux,"tk_pc")){

                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                        this.tokenAux = this.SiguienteToken();
                        this.Instrucciones();
                        if (this.TokenCorrecto(this.tokenAux,"tk_lc")){

                            this.tokenAux = this.SiguienteToken();
                            this.Elseif();
                            this.ListaDeclarariones();
                       
                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                        }   
        
                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                    } 
    
    
                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                } 

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
            } 

        

        } else if (this.TokenCorrecto(this.tokenAux,"tk_for")){

            this.tokenAux = this.SiguienteToken();
            if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                this.tokenAux = this.SiguienteToken();
                this.Dafor();
                if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){

                    this.tokenAux = this.SiguienteToken();
                    this.Expresion();
                    if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){

                        this.tokenAux = this.SiguienteToken();
                        this.Expresion();
                        if (this.TokenCorrecto(this.tokenAux,"tk_pc")){

                            this.tokenAux = this.SiguienteToken();
                            if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                                this.tokenAux = this.SiguienteToken();
                                this.Instrucciones();
                                if (this.TokenCorrecto(this.tokenAux,"tk_lc")){
                    
                                    this.tokenAux = this.SiguienteToken();
                                    this.ListaDeclarariones();      

                                } else {
                                    this.cErrores++;
                            this.errorSyntax = true;            
                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                                }
                
                                      
                            } else {
                                this.cErrores++;
                            this.errorSyntax = true;            
                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                            }
            
                                  
                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                        }
        
                              
                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
                    }
    
                          
                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
                }

                      
            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
            }
           

        } else if (this.TokenCorrecto(this.tokenAux,"tk_while")){

            this.tokenAux = this.SiguienteToken();
            if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                this.tokenAux = this.SiguienteToken();
                this.Expresion();
                if (this.TokenCorrecto(this.tokenAux,"tk_pc")){
    
                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_la")){
        
                        this.tokenAux = this.SiguienteToken();
                        this.Instrucciones();
                        if (this.TokenCorrecto(this.tokenAux,"tk_lc")){
            
                            this.tokenAux = this.SiguienteToken();      
                            this.ListaDeclarariones();

                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                        }    

                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
                    }    

                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                }    

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
            }

            

        } else if (this.TokenCorrecto(this.tokenAux,"tk_do")){

            this.tokenAux = this.SiguienteToken();
            if (this.TokenCorrecto(this.tokenAux,"tk_la")){

                this.tokenAux = this.SiguienteToken();
                this.Instrucciones();
                if (this.TokenCorrecto(this.tokenAux,"tk_lc")){

                    this.tokenAux = this.SiguienteToken();
                    if (this.TokenCorrecto(this.tokenAux,"tk_while")){
        
                        this.tokenAux = this.SiguienteToken();
                        if (this.TokenCorrecto(this.tokenAux,"tk_pa")){

                            this.tokenAux = this.SiguienteToken();
                            this.Expresion();
                            if (this.TokenCorrecto(this.tokenAux,"tk_pc")){

                                this.tokenAux = this.SiguienteToken();
                                if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){
                                    
                                    this.tokenAux = this.SiguienteToken();      
                                    this.ListaDeclarariones();
                    
                                } else {
                                    this.cErrores++;
                            this.errorSyntax = true;            
                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
                                }  
                
                
                            } else {
                                this.cErrores++;
                            this.errorSyntax = true;            
                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                            }  
            
            
                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
                        }  

                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada while"));
                    }  
    
    
                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba }"));
                }  

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba {"));
            }    

        } else if (this.TokenCorrecto(this.tokenAux,"tk_int") || this.TokenCorrecto(this.tokenAux,"tk_double") || this.TokenCorrecto(this.tokenAux,"tk_string") || this.TokenCorrecto(this.tokenAux,"tk_boolean") || this.TokenCorrecto(this.tokenAux,"tk_char")){

                this.tokenAux = this.SiguienteToken();
                this.Variable();
                if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){

                    this.tokenAux = this.SiguienteToken();      
                    this.ListaDeclarariones();

                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
                }  

        } else if (this.TokenCorrecto(this.tokenAux,"tk_id")){

            this.tokenAux = this.SiguienteToken();
            this.AsignacionLlamada();
            if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){

                this.tokenAux = this.SiguienteToken();      
                this.ListaDeclarariones();

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
            }  

        } else if (this.TokenCorrecto(this.tokenAux,"tk_commentu")){

            this.tokenAux = this.SiguienteToken();      
            this.ListaDeclarariones(); 

        } else if (this.TokenCorrecto(this.tokenAux,"tk_commentm")){

            this.tokenAux = this.SiguienteToken();      
            this.ListaDeclarariones(); 

        } else if (this.TokenCorrecto(this.tokenAux,"tk_system")){ 

            this.tokenAux = this.SiguienteToken(); 
            if (this.TokenCorrecto(this.tokenAux,"tk_punto")){
                
                this.tokenAux = this.SiguienteToken(); 
                if (this.TokenCorrecto(this.tokenAux,"tk_out")){

                    this.tokenAux = this.SiguienteToken(); 
                    if (this.TokenCorrecto(this.tokenAux,"tk_punto")){
    
                        this.tokenAux = this.SiguienteToken(); 
                        this.Print();
                        if (this.TokenCorrecto(this.tokenAux,"tk_pa")){
        
                            this.tokenAux = this.SiguienteToken(); 
                            this.Expresion();
                            if (this.TokenCorrecto(this.tokenAux,"tk_pc")){
            
                                this.tokenAux = this.SiguienteToken(); 
                                if (this.TokenCorrecto(this.tokenAux,"tk_pyc")){
                
                                    this.tokenAux = this.SiguienteToken();      
                                    this.ListaDeclarariones(); 
                                
                                } else {
                                    this.cErrores++;
                            this.errorSyntax = true;            
                                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ;"));
                                } 
                            
                            } else {
                                this.cErrores++;
                            this.errorSyntax = true;            
                                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba )"));
                            } 
                        
                        } else {
                            this.cErrores++;
                            this.errorSyntax = true;            
                            this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ("));
                        } 
                    
                    } else {
                        this.cErrores++;
                            this.errorSyntax = true;            
                        this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra ."));
                    } 
                
                } else {
                    this.cErrores++;
                            this.errorSyntax = true;            
                    this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba la palabra reservada out"));
                } 

            } else {
                this.cErrores++;
                            this.errorSyntax = true;            
                this.errores.push(new Error(this.cErrores,this.tokenAux.getFila(),this.tokenAux.getColumna(),"Sintactico","Se encontró "+this.tokenAux.getLexema()+" y se esperaba ."));
            } 

        } 
    }

    AsignacionLlamada(){

        if (this.TokenCorrecto(this.tokenAux,"tk_igual")){

            this.tokenAux = this.SiguienteToken(); 
            this.Expresion();     
